# rust_orm_gen

./: .env  .env.example  Cargo.toml  DEVELOPMENT_SETUP.md  LICENSE  PACKAGE_UPDATE_SUMMARY.md  PROJECT_INDEX.md  QUICK_REFERENCE.md  README.md  Readme.md  SECURITY_ADVISORY.md  VISUALIZATION_GUIDE.md  VSCODE_INTEGRATION.md  rust_orm_gen.code-workspace
db/: actor.rs  actor_crud.rs  actor_info.rs  actor_info_crud.rs  address.rs  address_crud.rs  category.rs  category_crud.rs  city.rs  city_crud.rs  country.rs  country_crud.rs  customer.rs  customer_crud.rs  customer_list.rs  customer_list_crud.rs  film.rs  film_actor.rs  film_actor_crud.rs  film_category.rs  film_category_crud.rs  film_crud.rs  film_list.rs  film_list_crud.rs  inventory.rs  inventory_crud.rs  language.rs  language_crud.rs  nicer_but_slower_film_list.rs  nicer_but_slower_film_list_crud.rs  payment.rs  payment_crud.rs  rental.rs  rental_crud.rs  sales_by_film_category.rs  sales_by_film_category_crud.rs  sales_by_store.rs  sales_by_store_crud.rs  staff.rs  staff_crud.rs  (+4 more)
documentation/: documentation.py
examples/: README.md  visualization_example.rs
examples/output/: schema.dot  schema.html  schema.json  schema.mmd  schema.puml  schema.vsdx
src/: cache.rs  cli.rs  context.rs  crud.rs  db.rs  error.rs  generator.rs  lazy_loading.rs  lib.rs  main.rs  metadata.rs  migrations.rs  models.rs  query_builder.rs  relationships.rs  transactions.rs  validation.rs  visualization.rs
